--- a/myProject/src/app/app.component.html
+++ b/myProject/src/app/app.component.html
@@ -1,7 +1,7 @@
 
 <body>
   <header>
-    <h1>Online Shop</h1>
+    <h1 class="online">Online Shop</h1>
     <nav>
       <ul>
         <li><a href="#">Main Page</a></li>
