--- a/myProject/src/app/app.component.css
+++ b/myProject/src/app/app.component.css
@@ -1,8 +1,11 @@
 p { 
-    font-size: 36px;
+    font-size: 20px;
     background-color: brown;
     border: solid 1px black;
     margin-top: 30px;
+}
+h1 {
+    background-color: chocolate;
 }
 .head {
     background-color: yellowgreen;
