--- a/myProject/src/app/app.component.css
+++ b/myProject/src/app/app.component.css
@@ -1,5 +1,5 @@
 p { 
-    font-size: 20px;
+    font-size: 15px;
     background-color: brown;
     border: solid 1px black;
     margin-top: 30px;
@@ -21,5 +21,9 @@ h1 {
       border: solid black 1px;
 }
 li {
-    background-color: cornflowerblue;
+    background-color: rgb(147, 178, 236);
+}
+footer {
+    font-size: 2px;
+    color: white;
 }
