HTML główny modyfikacja, HTML components modyfik

--- a/myProject/src/app/app.component.html
+++ b/myProject/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-<body>
+<body class="container">
   <header>
     <h1 class="online">Online Shop</h1>
     <nav>
@@ -32,4 +32,4 @@
   <footer>
     <p>&copy; 2023 Mój sklep internetowy. Wszelkie prawa zastrzeżone</p>
   </footer>
-
+</body>
