--- a/myProject/src/app/app.component.css
+++ b/myProject/src/app/app.component.css
@@ -1,3 +1,10 @@
+.container {
+    background-color: darkkhaki;
+}
+.head {
+    background-color: rgb(26, 26, 5);
+}
+
 p { 
     font-size: 15px;
     background-color: brown;
